--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -36,7 +36,7 @@
   </div>
 <% end %>
 <script>
-  document.addEventListener("turbo:load", function() {
+  $(document).ready(function() {
     var birthYearInput = document.getElementById("birth-year-input");
     var deathYearInput = document.getElementById("death-year-input");
     var birthYearError = document.getElementById("birth-year-error");
