--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -211,7 +211,7 @@
   </section>
 </div>
 <script>
-  document.addEventListener("turbo:load", function() {
+  $(document).ready(function() {
     const starRatings = document.querySelectorAll('.star-rating');
 
     starRatings.forEach(starRating => {
