--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -9,7 +9,7 @@
   color:#FFF;
    position: relative;
   }
-  .form{
+  .form-list{
     padding: 60px 10vw;
   }
 </style>
@@ -21,6 +21,6 @@
   <%end%>
   <h1>Créer une liste</h1>
 </section>
-<section class="form">
+<section class="form-list">
   <%= render 'form' %>
 </section>
