--- a/app/views/pages/add_elements.html.erb
+++ b/app/views/pages/add_elements.html.erb
@@ -49,12 +49,12 @@
     <div class="add-flex">
       <%= link_to new_designer_path do %>
         <div class="button-add">
-          <p>Designers</p>
+          Designers
         </div>
       <%end%>
       <%= link_to new_oeuvre_path do %>
         <div class="button-add">
-          <p>Oeuvres</p>
+          Oeuvres
         </div>
       <%end%>
     </div>
