--- a/app/views/pages/search_category.html.erb
+++ b/app/views/pages/search_category.html.erb
@@ -288,7 +288,7 @@
 <% end %>
 </section>
 <script>
-  document.addEventListener("turbo:load", function() {
+  $(document).ready(function() {
     const cardList = document.querySelectorAll('.card-list');
 
     cardList.forEach(function(card) {
