--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -194,7 +194,7 @@
   </div>
 </section>
 <script>
-  document.addEventListener("turbo:load", function() {
+  $(document).ready(function() {
     // Fonction pour afficher plus de lignes pour un tableau spécifique
     function showMoreRows(rows, loadMoreButton) {
       const initialRowsToShow = 10;
