--- a/app/views/oeuvres/search.html.erb
+++ b/app/views/oeuvres/search.html.erb
@@ -435,7 +435,9 @@
       <%= link_to designer do %>
         <div class="card-designer" style="background: url('<%= designer.image %>'); background-size: cover; background-position:center;">
           <div class="inner-card-designer">
-            <p class="country-card-designer"><%= designer.country.country %></p>
+            <p class="country-card-designer">
+              <span class="flag"><%= country_flag(designer.country.country_numeric) %></span>
+              <%= designer.country.country %></p>
             <p class="title-card-designer"><%= designer.nom_designer %></p>
           </div>
         </div>
@@ -465,61 +467,61 @@
     </div>
   </div>
   <script>
-    document.addEventListener("turbo:load", function() {
-      const designerCards = document.querySelectorAll('.card-designer');
-      const oeuvreCards = document.querySelectorAll('.card-oeuvre');
-      const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
-      const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
-      const initialCardsToShow = 8;
-      let cardsToShowDesigners = initialCardsToShow;
-      let cardsToShowOeuvres = initialCardsToShow;
+    $(document).ready(function() {
+        const designerCards = document.querySelectorAll('.card-designer');
+        const oeuvreCards = document.querySelectorAll('.card-oeuvre');
+        const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
+        const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
+        const initialCardsToShow = 8;
+        let cardsToShowDesigners = initialCardsToShow;
+        let cardsToShowOeuvres = initialCardsToShow;
 
-      // Fonction pour afficher les cartes des designers
-      function showMoreDesigners() {
-        for (let i = cardsToShowDesigners; i < cardsToShowDesigners + initialCardsToShow; i++) {
-          if (i >= designerCards.length) {
-            loadMoreButtonDesigners.disabled = true;
-            loadMoreButtonDesigners.textContent = "";
-            break;
+        // Fonction pour afficher les cartes des designers
+        function showMoreDesigners() {
+          for (let i = cardsToShowDesigners; i < cardsToShowDesigners + initialCardsToShow; i++) {
+            if (i >= designerCards.length) {
+              loadMoreButtonDesigners.disabled = true;
+              loadMoreButtonDesigners.textContent = "";
+              break;
+            }
+            designerCards[i].style.display = 'flex';
           }
-          designerCards[i].style.display = 'flex';
+          cardsToShowDesigners += initialCardsToShow;
         }
-        cardsToShowDesigners += initialCardsToShow;
-      }
 
-      // Fonction pour afficher les cartes des oeuvres
-      function showMoreOeuvres() {
-        for (let i = cardsToShowOeuvres; i < cardsToShowOeuvres + initialCardsToShow; i++) {
-          if (i >= oeuvreCards.length) {
-            loadMoreButtonOeuvres.disabled = true;
-            loadMoreButtonOeuvres.textContent = "";
-            break;
+        // Fonction pour afficher les cartes des oeuvres
+        function showMoreOeuvres() {
+          for (let i = cardsToShowOeuvres; i < cardsToShowOeuvres + initialCardsToShow; i++) {
+            if (i >= oeuvreCards.length) {
+              loadMoreButtonOeuvres.disabled = true;
+              loadMoreButtonOeuvres.textContent = "";
+              break;
+            }
+            oeuvreCards[i].style.display = 'flex';
           }
-          oeuvreCards[i].style.display = 'flex';
+          cardsToShowOeuvres += initialCardsToShow;
         }
-        cardsToShowOeuvres += initialCardsToShow;
-      }
 
-      // Cacher toutes les cartes des designers au-delà de celles à afficher initialement
-      for (let i = initialCardsToShow; i < designerCards.length; i++) {
-        designerCards[i].style.display = 'none';
-      }
+        // Cacher toutes les cartes des designers au-delà de celles à afficher initialement
+        for (let i = initialCardsToShow; i < designerCards.length; i++) {
+          designerCards[i].style.display = 'none';
+        }
 
-      // Cacher toutes les cartes des oeuvres au-delà de celles à afficher initialement
-      for (let i = initialCardsToShow; i < oeuvreCards.length; i++) {
-        oeuvreCards[i].style.display = 'none';
-      }
+        // Cacher toutes les cartes des oeuvres au-delà de celles à afficher initialement
+        for (let i = initialCardsToShow; i < oeuvreCards.length; i++) {
+          oeuvreCards[i].style.display = 'none';
+        }
 
-      // Gérer le clic sur le bouton "Charger plus" pour les designers
-      loadMoreButtonDesigners.addEventListener('click', function() {
-        showMoreDesigners();
+        // Gérer le clic sur le bouton "Charger plus" pour les designers
+        loadMoreButtonDesigners.addEventListener('click', function() {
+          showMoreDesigners();
+        });
+
+        // Gérer le clic sur le bouton "Charger plus" pour les oeuvres
+        loadMoreButtonOeuvres.addEventListener('click', function() {
+          showMoreOeuvres();
+        });
       });
-
-      // Gérer le clic sur le bouton "Charger plus" pour les oeuvres
-      loadMoreButtonOeuvres.addEventListener('click', function() {
-        showMoreOeuvres();
-      });
-    });
   </script>
 </div>
 <script>
@@ -613,7 +615,7 @@
   }
 </script>
 <script>
-  document.addEventListener("turbo:load", function() {
+  $(document).ready(function() {
     var works = <%= raw @works.to_json %>; // Injecter les noms des œuvres dans le JavaScript
     var designers = <%= raw @designers.to_json %>; // Injecter les noms des designers dans le JavaScript
 
@@ -632,7 +634,7 @@
   });
 </script>
 <script>
-  document.addEventListener("turbo:load", function() {
+  $(document).ready(function() {
     var workSearchInput = document.getElementById("workSearch");
 
     workSearchInput.addEventListener("keydown", function(event) {
