--- a/app/assets/stylesheets/abstracts/_variables.scss
+++ b/app/assets/stylesheets/abstracts/_variables.scss
@@ -2,4 +2,4 @@ $primary-color: #202020;
 $secondary-color: #fff;
 // Couleurs de texte
 $background-color: #f5f5f5;
-$text-color: #8D9299;
+$text-color: #545456;
