--- a/app/assets/stylesheets/base/_font.scss
+++ b/app/assets/stylesheets/base/_font.scss
@@ -72,3 +72,18 @@ p{
 .black{
   color: $primary-color;
 }
+@media screen and (max-width: 375px) {
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+  h3{
+    font-size: 18px;
+  }
+  p{
+    font-size: 16px;
+  }
+}
