--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -1,72 +1,4 @@
 <style>
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-  }
-  .validation{
-    background-color: rgba(0, 0, 0, 0.5);
-    top: 0;
-    left: 0;
-    position: fixed;
-    z-index: 9999;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color:#FFF;
-    gap: 32px;
-  }
-  .validation-title{
-    font-size: 22px;
-    font-weight: 500;
-  }
-  .validation-text{
-    font-size: 18px;
-    color:#D9D9D9;
-    width: 40vw;
-    text-align:center;
-  }
-  .overlay-bottom{
-    display: none;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 25vh;
-    background-color: rgba(0, 0, 0, 0.5); /* couleur semi-transparente */
-    z-index: 999; /* assurez-vous que l'overlay est au-dessus de tous les autres éléments */
-  }
-  .naviguation{
-      bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 25vh;
-    position: fixed;
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color:#FFF;
-    gap: 32px;
-  }
-  .naviguation-buttons{
-    display: flex;
-    gap: 16px;
-  }
-  .logo-overlay{
-    position: absolute;
-    left: 35px;
-    top: 35px;
-  }
-
   .box-list{
     align-items: center;
     margin-top: 24px;
@@ -185,7 +117,7 @@
         <h2 class="title-card"><%= designer.nom_designer %></h2>
       </div>
       <h3 class="title-description-card">Description</h3>
-      <p class="description-card"><%= designer.description %></p>
+      <p class="text-description-card"><%= designer.description %></p>
       <h3 class="title-description-card">Actions</h3>
       <div class="flex-actions">
         <% if designer.validation %>
