--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -1,72 +1,4 @@
 <style>
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-  }
-  .validation{
-    top: 0;
-    left: 0;
-    position: fixed;
-    z-index: 9999;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color:#FFF;
-    gap: 32px;
-  }
-  .validation-title{
-    font-size: 22px;
-    font-weight: 500;
-  }
-  .validation-text{
-    font-size: 18px;
-    color:#D9D9D9;
-    width: 40vw;
-    text-align:center;
-  }
-  .overlay-bottom{
-    display: none;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 25vh;
-    background-color: rgba(0, 0, 0, 0.5); /* couleur semi-transparente */
-    z-index: 999; /* assurez-vous que l'overlay est au-dessus de tous les autres éléments */
-  }
-  .naviguation{
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 25vh;
-    position: fixed;
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color:#FFF;
-    gap: 32px;
-  }
-  .naviguation-buttons{
-    display: flex;
-    gap: 16px;
-  }
-
-  .logo-overlay{
-    position: absolute;
-    left: 35px;
-    top: 35px;
-  }
-
   .box-list{
     align-items: center;
     margin-top: 24px;
@@ -208,9 +140,9 @@
         </p>
         <h2 class="title-card"><%= oeuvre.nom_oeuvre %></h2>
       </div>
-      <h3 class="title-description-card">Description</h3>
-      <p class="description-card"><%= oeuvre.description %></p>
-      <h3 class="title-description-card">Actions</h3>
+      <h3 class="title-description-reference">Description</h3>
+      <p class="text-description-reference"><%= oeuvre.description %></p>
+      <h3 class="title-description-reference">Actions</h3>
       <div class="flex-actions">
         <% if oeuvre.validation %>
           <a href="#" id="shareButton" class="button-circle">
@@ -249,7 +181,7 @@
         <%end%>
       </div>
       <div class="contribution">
-        <h3 class="title-description-card">Contribution</h3>
+        <h3 class="title-description-reference">Contribution</h3>
         <div class="flex-contributor">
           <div class="box-contributor">
             <% if oeuvre.user_id.present? %>
@@ -280,7 +212,7 @@
                               .where.not(id: @oeuvre.id)
                               .limit(3) %>
       <% if designer_oeuvres.any? %>
-        <h3 class="title-description-card">Œuvres du même designer</h3>
+        <h3 class="title-description-reference">Œuvres du même designer</h3>
         <div class="oeuvres-same">
           <% designer_oeuvres.each do |oeuvre| %>
             <%= link_to oeuvre do %>
@@ -296,7 +228,7 @@
           <% end %>
         </div>
       <% end %>
-      <h3 class="title-description-card">Découvrir d'autres œuvres</h3>
+      <h3 class="title-description-reference">Découvrir d'autres œuvres</h3>
       <div class="oeuvres-same">
         <% domaine_oeuvres = Oeuvre.all
                             .where.not(id: @oeuvre.id)
