--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -423,6 +423,9 @@
 
   .header-show {
     height: 100px;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: none;
   }
 
   .header-show.small-height {
