--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 @import 'components/button';
 @import 'components/card';
 @import 'components/form';
+@import 'components/loader';
 @import 'components/popup';
 
 @import 'layout/header';
