--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -82,6 +82,13 @@
 }
 
 @media screen and (max-width: 425px) {
+  .img-card {
+    transform: rotate(-4deg);
+  }
+
+  .bg-card {
+    transform: rotate(4deg);
+  }
   .card {
     padding-top: 100px;
     width: 90vw;
@@ -89,10 +96,11 @@
 
   .bg-card {
     width: 90vw;
-    height: 380px;
+    height: 60vh;
   }
 
   .bg-card .date-main{
+    transform: rotate(-4deg);
     top: 24px;
     scale: 0.8;
     font-size: 16px;
