--- a/app/assets/stylesheets/pages/_defaultpage.scss
+++ b/app/assets/stylesheets/pages/_defaultpage.scss
@@ -1,17 +1,19 @@
 @import 'abstracts/variables';
 
-.grid-1{
+.grid-1 {
   padding: 0 10vw;
   margin-top: 64px;
 }
-.top-default-page{
+
+.top-default-page {
   display: flex;
   align-items: center;
   height: 15vh;
   padding: 0 5vw;
   gap: 50px;
   background-color: $primary-color;
-  h1{
+
+  h1 {
     color: $secondary-color;
   }
 }
@@ -27,7 +29,8 @@ table {
   width: 100%;
 }
 
-th, td {
+th,
+td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
@@ -60,6 +63,7 @@ tr:hover {
 
 .btn-danger {
   background-color: #dc3545;
+
   &:hover {
     background-color: #c82333;
   }
@@ -67,14 +71,16 @@ tr:hover {
 
 .btn-green {
   background-color: #3EBC68;
+
   &:hover {
     background-color: #1A843E;
   }
 }
 
-.btn-orange{
+.btn-orange {
   background-color: #F2AD22;
-  &:hover{
+
+  &:hover {
     background-color: #D49A26;
   }
 }
